<resources>
    <string name="app_name">MVVM</string>
    <string name="button">button</string>
    <string name="bindfragment">view from bind fragment</string>
    <string name="hello_blank_fragment">value</string>
    <string name="bingfragment">view from binding fragment</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="a_0">0</string>
    <string name="b_0">0</string>
    <string name="a_2">+2</string>
    <string name="a_1">+1</string>
    <string name="a_3">+3</string>
    <string name="b_3">+3</string>
    <string name="b_2">+2</string>
    <string name="b_1">+1</string>
    <string name="undo">撤销</string>
    <string name="reset">重置</string>
    <string name="sp_save">保存</string>
    <string name="detail">detail</string>
    <string name="detail_button">Button</string>
    <string name="home">home</string>
    <string name="home_button">Button</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_clear">清空</string>
    <string name="btn_create">生成</string>
    <string name="str_loading">loading...</string>
</resources>
